--- a/views/settings.html
+++ b/views/settings.html
@@ -23,7 +23,12 @@
                                           <label class="label bg-green">Verified</label>
                                              <p class="font-white text-bolder hideAtBig"></p>
                                     </div>
+
                                 </div>
+                            </div>
+                            <div class="input-group mg-b-pro-edt col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                                <span class="input-group-addon"><i class="icon nalika-search" aria-hidden="true"></i></span>
+                                <input id="settingSearchInput" type="search" class="form-control" placeholder="Enter a User ID or username to find">
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                 <div class="breadcomb-report">
@@ -148,27 +153,27 @@
                                                     <label>First Name</label>
                                                     <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input type="text" class="form-control" placeholder="">
+                                                        <input id="settingFirstnameEdit" type="text" class="form-control" placeholder="">
                                                     </div>
                                                     <label>Last Name</label>
                                                     <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input type="text" class="form-control" placeholder="">
+                                                        <input id="settingLastnameEdit" type="text" class="form-control" placeholder="">
                                                     </div>
                                                      <label>Phone Number</label>
                                                       <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input type="text" class="form-control" placeholder="">
+                                                        <input id="settingPhoneEdit" type="text" class="form-control" placeholder="">
                                                     </div>
                                                     <label>Date Of Birth</label>
                                                       <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input type="text" class="form-control" placeholder="">
+                                                        <input id="settingDOBEdit" type="text" class="form-control" placeholder="">
                                                     </div>
                                                     <label>Gender</label>
                                                     <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input type="text" class="form-control" placeholder="">
+                                                        <input id="settingGenderEdit" type="text" class="form-control" placeholder="">
                                                     </div>
                                                 
                                                 </div>
@@ -178,27 +183,27 @@
                                                     <label>Address</label>
                                                     <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input type="text" class="form-control" placeholder="">
+                                                        <input id="settingAddressEdit" type="text" class="form-control" placeholder="">
                                                     </div>
                                                     <label>Country</label>
                                                     <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input type="text" class="form-control" placeholder="">
+                                                        <input id="settingCountryEdit" type="text" class="form-control" placeholder="">
                                                     </div>
                                                     <label>State</label>
                                                     <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input type="text" class="form-control" placeholder="">
+                                                        <input id="settingStateEdit" type="text" class="form-control" placeholder="">
                                                     </div>
                                                     <label>City</label>
                                                     <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input type="text" class="form-control" placeholder="">
+                                                        <input id="settingCityEdit" type="text" class="form-control" placeholder="">
                                                     </div>
-                                                    <label>Zip Code</label>
+                                                    <label>User ID</label>
                                                        <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input type="text" class="form-control" placeholder="">
+                                                        <input id="settingUserIDEdit"  style="background: inherit;" disabled type="text" class="form-control" placeholder="">
                                                     </div>
                                                   
                                               
