fix user edit page

--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -146,6 +146,7 @@
 
         {{#if settings}}
             <script src="js/helpers/api/settings.js"></script>
+            <script src="js/helpers/domInsert/showUser.js"></script>
         {{/if}}
 
 
