--- a/views/settings.html
+++ b/views/settings.html
@@ -59,18 +59,26 @@
                                                     <div class="form-group-inner">
                                                         <div class="row">
                                                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                                                                <label class="font-white">Name:</label>
+                                                            </div>
+                                                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+                                                                <!-- <input type="email" class="form-control" placeholder="Enter Email" /> -->
+                                                                <label class="font-white" id="settingNameShow">----</label>
+                                                                
+                                                            </div>
+                                                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                                                                 <label class="font-white">Email:</label>
                                                             </div>
                                                             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                                                                 <!-- <input type="email" class="form-control" placeholder="Enter Email" /> -->
-                                                                <label class="font-white">happyboyz2k5@yahoo.com</label>
+                                                                <label class="font-white" id="settingEmailShow">----</label>
                                                                 
                                                             </div>
                                                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                                                                 <label class="font-white">Phone:</label>
                                                             </div>
                                                      <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                                                        <label class="font-white">07038850669</label>
+                                                        <label class="font-white" id="settingPhoneShow">----</label>
                                                                 <!-- <input type="phone" class="form-control" placeholder="phone" /> -->
                                                             </div>
                                                         </div>
@@ -86,23 +94,29 @@
                                                             </div>
                                                             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                                                                 <!-- <input type="email" class="form-control" placeholder="Enter Email" /> -->
-                                                                <label class="font-white">15/04/2020</label>
+                                                                <label class="font-white" id="settingJoined">----</label>
                                                                 
                                                             </div>
                                                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                                                                 <label class="font-white">Title:</label>
                                                             </div>
                                                      <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                                                        <label class="font-white">Admin</label>
+                                                        <label class="font-white" id="settingReferralTitle">----</label>
                                                                 <!-- <input type="phone" class="form-control" placeholder="phone" /> -->
-                                                            </div>
-                                                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                                                                <label class="font-white">Referral Link:</label>
-                                                            </div>
+                                                    </div>
+                                                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                                                            <label class="font-white">Referral Link:</label>
+                                                     </div>
                                                      <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                                                        <button class="btn btn-sm btn-primary login-submit-cs" type="submit">Copy</button>
-                                                        <button class="btn btn-sm btn-primary login-submit-cs" type="submit">View</button>
+                                                        <input style="background: inherit; color: white; padding-top: 5px; padding-bottom: 5px;" 
+                                                        value="https://" id="settingReferralLink">
+                                                        <style>
+                                                                #copyRefLink{
+                                                                    display: none;
+                                                                }
+                                                        </style>
                                                             </div>
+                                                             <button style="width: 30%; margin:auto; margin-top: 5px;" id="copyRefLink" class="btn btn-sm btn-primary login-submit-cs">Copy Link</button>
                                                         </div>
                                                     </div>
 
