--- a/views/cart.html
+++ b/views/cart.html
@@ -16,14 +16,15 @@
                                     <div class=" row hpanel mt-b-30 col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                         <div class="panel-body file-body file-cs-ctn">
                                             
-                                           <img src="https://www.csklegal.com/wp-content/uploads/2014/07/no-image.png" height="50px" width="50px">
+                                           <img id="imgPreview" style="height: 200px; width:200px;" src="https://www.csklegal.com/wp-content/uploads/2014/07/no-image.png">
                                         </div>
                                         <div class="panel-footer">
                                              <input id="uploadSelfieInput" type="file" class="form-control"/>  
                                         </div>
                                         <div class="text-center credit-card-custom office-pad-bottom">
                                             <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                            <button type="button" class="btn btn-success btn-block ">Upload</button>
+                                            <button id="uploadCart" style="padding: 10px; margin-top: 5px; font-size: 25px; font-weight: bold;" type="button"
+                                             class="btn btn-success btn-block ">Upload</button>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6"></div>
