--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -149,6 +149,16 @@
             <script src="js/helpers/domInsert/showUser.js"></script>
         {{/if}}
 
+        {{#if tree}}
+            <script src="js/helpers/api/tree.js"></script>
+        {{/if}}
+
+        {{#if register}}
+            <script src="js/helpers/api/register.js"></script>
+        {{/if}}
+        {{#if cart}}
+            <script src="js/helpers/api/cart.js"></script>
+        {{/if}}
 
         {{#if account}}
             <!-- <script src="js/helpers/tokenListener.js"></script>
