--- a/views/tree.html
+++ b/views/tree.html
@@ -46,9 +46,8 @@
                                          <div class="header-top-menu tabl-d-n hd-search-rp">
                                         <div class="breadcome-heading">
                                             <form role="search" class="">
-                                                <input type="text" placeholder="Search By userID,userName" class="form-control">
+                                                <input id="searchDownlinerInput" style="color: white; width: 100%;" type="text" placeholder="Search By userID,userName" class="form-control">
                                                 <a href=""><i class="fa fa-search"></i></a>
-                                                
                                             </form>
                                         </div>
                                     </div>
@@ -72,38 +71,13 @@
                              <h3 class="product-cart-dn">Shopping</h3>
                             <div class="product-list-cart">
                                 <div class="product-status-wrap border-pdt-ct ">
-                                     <table style="width:19%" class="table table-borderless ">
+                                     <table style="width:50%" class="table table-borderless ">
                                         <tr>
                                             <th style="text-align: center;">Downliners</th>
                                        
                                         </tr>
-                                        <tr>
-                                            <td style="text-align: center;"><img src="img/notification/fenibo.jpg" class="img-fluid img-rounded" alt="" />
-                                                <input type="text" class="form-control" value="okechukwu" width="10%"> 
-
-                                            </td>
-                                         
-                                        </tr>
-                                        <tr>
-                                            <td style="text-align: center;"><img src="img/notification/fenibo.jpg" class="img-fluid img-rounded" alt="" />
-                                                <input type="text" class="form-control" value="okechukwu" width="10%"> 
-
-                                            </td>
-                                       
-                                        </tr>
-                                        <tr>
-                                            <td style="text-align: center;"><img src="img/notification/fenibo.jpg" class="img-fluid img-rounded" alt="" />
-                                                <input type="text" class="form-control" value="okechukwu" width="10%"> 
-
-                                            </td>
-                                           
-                                        </tr>
-                                        <tr>
-                                            <td style="text-align: center;"><img src="img/notification/fenibo.jpg" class="img-fluid img-rounded" alt="" />
-                                                <input type="text" class="form-control" value="okechukwu" width="10%"> 
-
-                                            </td>
-                                       
+                                        <tr id="downlinerBlock">
+                                            <td>  No Downliners Found</td>
                                         </tr>
                                     </table>
                      
