--- a/views/home.html
+++ b/views/home.html
@@ -71,7 +71,7 @@
 
                             <hr class="hr">
                             <div class="stats-row">
-                              <h4 class="font-white" id="totalMembers">175 </h4>
+                              <h4 class="font-white" id="totalMembers">----</h4>
                               
                             </div>
 
@@ -83,7 +83,7 @@
                             <h3 class="smallTitle">Total Revenue Received (Credit)</h3>
                             <hr class="hr">
                             <div class="stats-row">
-                              <h4 class="font-white" id="totalRevenueReceived">---</h4>
+                              <h4 class="font-white" id="totalRevenueReceived">----</h4>
                               
                             </div>
                           <!--   <div id="sparkline8">175</div> -->
@@ -94,7 +94,7 @@
                             <h3 class="smallTitle">Total Cash Payout (Debit)</h3>
                             <hr class="hr">
                                 <div class="stats-row">
-                              <h4 class="font-white" id="totalCashPayout">---</h4>
+                              <h4 class="font-white" id="totalCashPayout">----</h4>
                               
                             </div>
                           <!--   <div id="sparkline8">175</div> -->
@@ -112,7 +112,7 @@
 
                             <hr class="hr">
                             <div class="stats-row">
-                              <h4 class="font-white" id="affiliateCashoutRequest">---</h4>
+                              <h4 class="font-white" id="affiliateCashoutRequest">----</h4>
                               
                             </div>
 
@@ -124,7 +124,7 @@
                             <h3 class="smallTitle">Commission Paid Out</h3>
                             <hr class="hr">
                             <div class="stats-row">
-                              <h4 class="font-white" id="commisionPayout">---</h4>
+                              <h4 class="font-white" id="commisionPayout">----</h4>
                               
                             </div>
                           <!--   <div id="sparkline8">175</div> -->
@@ -135,7 +135,7 @@
                             <h3 class="smallTitle">Auto Upgrade Balance</h3>
                             <hr class="hr">
                                 <div class="stats-row">
-                              <h4 class="font-white" id="totalUpgradeWallet">---</h4>
+                              <h4 class="font-white" id="totalUpgradeWallet">----</h4>
                               
                             </div>
                           <!--   <div id="sparkline8">175</div> -->
@@ -153,7 +153,7 @@
 
                         <hr class="hr">
                         <div class="stats-row">
-                          <h4 class="font-white" id="totalIncentiveWallet">---</h4>
+                          <h4 class="font-white" id="totalIncentiveWallet">----</h4>
                           
                         </div>
 
