--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -161,25 +161,22 @@
         {{/if}}
 
         {{#if account}}
-            <!-- <script src="js/helpers/tokenListener.js"></script>
-            <script src="js/helpers/pay.js"></script> -->
+            <script src="js/helpers/tokenListener.js"></script>
+            <script src="js/helpers/pay.js"></script>
         {{/if}}
         
         {{#if activateMember}}
-            <!-- <script src="js/helpers/tokenListener.js"></script>
             <script src="js/helpers/api/activateMember.js"></script> -->
         {{/if}}    
 
         {{#if cashoutRequest}}
-            <!-- <script src="js/helpers/tokenListener.js"></script>
             <script src="js/helpers/api/disburstApi.js"></script>
-            <script src="js/helpers/api/getCashOutRequest.js"></script> -->
+            <script src="js/helpers/api/getCashOutRequest.js"></script>
         {{/if}} 
 
         {{#if walletInfo}}
-        <!-- <script src="js/helpers/tokenListener.js"></script>
         <script src="js/helpers/api/disburstApi.js"></script>
-        <script src="js/helpers/api/getCashOutRequest.js"></script> -->
+        <script src="js/helpers/api/getCashOutRequest.js"></script>
         {{/if}}
         <script>
           tinymce.init({
